--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,17 @@
     <div id="container">
         <div class="row"><input id="newClient" type="text" placeholder="new client">
             <button onclick="addClient()">Add Client</button></div>
+            <div class="row">
+                <div class="titleDiv">
+                    <span>Name</span>
+                    <span>Filter</span>
+                </div>
+                <span class="tc">Hours Purchased</span>
+                <div class="remainDiv">
+                    <span>Time Rendering</span>
+                    <span>Time Owed</span>
+                </div>
+            </div>
         </div>
 
         <main id="main"></main>
