adding functionality to buttons

--- a/public/index.html
+++ b/public/index.html
@@ -9,24 +9,28 @@
 </head>
 
 <body>
-    <nav>Cient Manager</nav>
+    <nav>Client Manager</nav>
     <div id="container">
-        <div class="row"><input id="newClient" type="text" placeholder="new client">
-            <button onclick="addClient()">Add Client</button></div>
-            <div class="row">
-                <div class="titleDiv">
-                    <span>Name</span>
-                    <span>Filter</span>
-                </div>
-                <span class="tc">Hours Purchased</span>
-                <div class="remainDiv">
-                    <span>Time Rendering</span>
-                    <span>Time Owed</span>
-                </div>
+        <div id="newClientDiv" class="row">
+            <input id="newClient" type="text" placeholder="new client">
+            <button onclick="addClient()">Add Client</button>
+        </div>
+
+        <div class="row">
+            <div class="titleDiv">
+                <span>Name</span>
+                <span>Filter</span>
+            </div>
+            <span class="tc">Hours Purchased</span>
+            <div class="remainDiv">
+                <span>Tutored Time</span>
+                <span>Time Owed</span>
             </div>
         </div>
 
         <main id="main"></main>
+    </div>
+
 
     <script src="./assets/js/script.js"></script>
 </body>
