added sort functionality

--- a/public/index.html
+++ b/public/index.html
@@ -27,10 +27,10 @@
         <div id="labels" class="row">
             <div class="titleDiv">
                 <span>Name</span>
-                <span>Filter</span>
+                <span>Focus</span>
             </div>
             <span class="tc">Hours Purchased</span>
-            <div class="remainDiv">
+            <div>
                 <span>Tutored Time</span>
                 <span>Time Owed</span>
             </div>
