modified focus function and style

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./assets/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ClientMgr</title>
+    <title>HeroMgr</title>
 </head>
 
 <body>
-    <nav>Client Manager</nav>
+    <nav>Hero Manager</nav>
     <div id="container">
         <div id="newClientDiv" class="row">
             <div id="summary">
