Completed frontend functionality

--- a/public/index2.html
+++ b/public/index2.html
@@ -12,6 +12,7 @@
     <nav>Hero Manager</nav>
     <div id="container"></div>
 
+    <script src="./assets/js/data.js"></script>
     <script src="./assets/js/script2.js"></script>
 </body>
 
