Transformed data and applied new frontend

--- a/public/index.html
+++ b/public/index.html
@@ -10,35 +10,7 @@
 
 <body>
     <nav>Hero Manager</nav>
-    <div id="container">
-        <div id="newClientDiv" class="row">
-            <div id="summary">
-                <label for="activeClients">Active Clients</label>
-                <span id="activeClients">-1</span>
-                <label for="remainHours">Hours Remaining</label>
-                <span id="remainHours">-1</span>
-            </div>
-            <input id="newClient" type="text" placeholder="new client">
-            <input id="newEmail" type="text" placeholder="jDoe@mail.com">
-            <input id="newNumber" type="text" placeholder="(234) 567-8910">
-            <button onclick="addClient()">Add Client</button>
-        </div>
-
-        <div id="labels" class="row">
-            <div class="titleDiv">
-                <span>Name</span>
-                <span>Focus</span>
-            </div>
-            <span class="tc">Hours Purchased</span>
-            <div>
-                <span>Tutored Time</span>
-                <span>Time Owed</span>
-            </div>
-        </div>
-
-        <main id="main"></main>
-    </div>
-
+    <div id="container"></div>
 
     <script src="./assets/js/script.js"></script>
 </body>
