Completed refactoring of code and data

--- a/public/index3.html
+++ b/public/index3.html
@@ -14,7 +14,7 @@
         <div id="newClientDiv" class="row">
             <div id="summary">
                 <label for="activeClients">Active Clients</label>
-                <span id="activeClients">-1</span>
+                <span class="activeClients">-1</span>
                 <label for="remainHours">Hours Remaining</label>
                 <span id="remainHours">-1</span>
             </div>
